--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,6 @@
 
 # production
 /build
-/public
 
 # misc
 .DS_Store
@@ -18,6 +17,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+*.log
 
 npm-debug.log*
 yarn-debug.log*
