--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
-    "react-scroll-progress-bar": "^1.1.12"
+    "react-preloaders": "^3.0.3",
+    "react-scripts": "3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
