--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "bootstrap": "^4.5.3",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-preloaders": "^3.0.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
