--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-preloaders": "^3.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
