--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "animate.css": "^4.1.1",
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -17,7 +18,8 @@
     "react-helmet": "^6.1.0",
     "react-preloaders": "^3.0.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
