sequelize and mysql packages

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "animate.css": "^4.1.1",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "mysql": "^2.18.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
@@ -23,6 +24,7 @@
     "react-preloaders": "^3.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "sequelize": "^6.3.5",
     "styled-components": "^5.2.1"
   },
   "scripts": {
