--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "animate.css": "^4.1.1",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
-    "mysql": "^2.18.1",
+    "dotenv": "^8.2.0",
+    "mysql2": "^2.2.5",
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
