--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.0.7",
     "react-hook-form": "^6.11.5",
     "react-preloaders": "^3.0.3",
     "react-router-dom": "^5.2.0",
