--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.14.0",
     "react-helmet-async": "^1.0.7",
     "react-hook-form": "^6.13.1",
+    "react-icons": "^4.1.0",
     "react-preloaders": "^3.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
