--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.13",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -20,7 +22,6 @@
     "react-dom": "^16.14.0",
     "react-helmet-async": "^1.0.7",
     "react-hook-form": "^6.13.1",
-    "react-icons": "^4.1.0",
     "react-preloaders": "^3.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
