--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-helmet-async": "^1.0.7",
     "react-hook-form": "^6.14.0",
     "react-preloaders": "^3.0.3",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.1"
