--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.14.0",
+    "react-grid-layout": "^1.2.0",
     "react-helmet-async": "^1.0.7",
     "react-hook-form": "^6.14.0",
     "react-preloaders": "^3.0.3",
