--- a/package.json
+++ b/package.json
@@ -1,26 +1,20 @@
 {
   "name": "eaterybot.trefis.net",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.1.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@react-pdf/renderer": "^1.6.16",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "animate.css": "^4.1.1",
     "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
     "crypto-js": "^4.0.0",
     "material-table": "^1.69.2",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
-    "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^16.14.0",
     "react-grid-layout": "^1.2.4",
@@ -28,14 +22,13 @@
     "react-hook-form": "^6.15.5",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "recharts": "^2.0.9",
-    "styled-components": "^5.2.3"
+    "react-scripts": "^4.0.3",
+    "recharts": "^2.0.9"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -54,6 +47,9 @@
     ]
   },
   "devDependencies": {
-    "dotenv": "^8.2.0"
+    "autoprefixer": "^9.8.6",
+    "dotenv": "^8.2.0",
+    "postcss": "^7.0.35",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2"
   }
 }
