--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
-    "recharts": "^2.0.9"
+    "recharts": "^2.0.9",
+    "styled-components": "^5.2.3"
   },
   "scripts": {
     "start": "craco start",
