--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@headlessui/react": "^1.1.0",
+    "@heroicons/react": "^1.0.1",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@react-pdf/renderer": "^1.6.16",
     "axios": "^0.21.1",
     "crypto-js": "^4.0.0",
+    "install": "^0.13.0",
     "material-table": "^1.69.2",
+    "npm": "^7.11.1",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-bootstrap": "^1.5.2",
