--- a/package.json
+++ b/package.json
@@ -14,21 +14,15 @@
     "@react-pdf/renderer": "^1.6.16",
     "axios": "^0.21.1",
     "crypto-js": "^4.0.0",
-    "install": "^0.13.0",
     "material-table": "^1.69.2",
-    "npm": "^7.11.1",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
-    "react-bootstrap": "^1.5.2",
     "react-dom": "^16.14.0",
     "react-grid-layout": "^1.2.4",
-    "react-helmet-async": "^1.0.9",
-    "react-hook-form": "^6.15.5",
-    "react-reveal": "^1.2.2",
+    "react-hook-form": "^7.3.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
-    "recharts": "^2.0.9",
-    "styled-components": "^5.2.3"
+    "recharts": "^2.0.9"
   },
   "scripts": {
     "start": "craco start",
@@ -52,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.3.2",
     "autoprefixer": "^9.8.6",
     "dotenv": "^8.2.0",
     "postcss": "^7.0.35",
