--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.14.0",
     "react-grid-layout": "^1.2.4",
     "react-hook-form": "^7.3.5",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "recharts": "^2.0.9"
